test/message/eval_messages.chakracore.out
[eval]
[eval]:1
'use strict'; with(this){__filename}
              ^^^^^

SyntaxError: 'with' statements are not allowed in strict mode
   at Script (vm.js:*:*)
   at createScript (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([eval]-wrapper:*:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*:*)
   at evalScript (internal/bootstrap/node.js:*:*)
   at executeUserCode (internal/bootstrap/node.js:*:*)
   at startExecution (internal/bootstrap/node.js:*:*)
   at startup (internal/bootstrap/node.js:*:*)
   at Anonymous function (internal/bootstrap/node.js:*:*)
42
42
[eval]:1
throw new Error("hello")
^

Error: hello
   at Global code ([eval]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([eval]-wrapper:*:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*:*)
   at evalScript (internal/bootstrap/node.js:*:*)
   at executeUserCode (internal/bootstrap/node.js:*:*)
   at startExecution (internal/bootstrap/node.js:*:*)
   at startup (internal/bootstrap/node.js:*:*)
   at Anonymous function (internal/bootstrap/node.js:*:*)
[eval]:1
'use strict'; throw new Error("hello")
              ^

Error: hello
   at Global code ([eval]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([eval]-wrapper:*:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*:*)
   at evalScript (internal/bootstrap/node.js:*:*)
   at executeUserCode (internal/bootstrap/node.js:*:*)
   at startExecution (internal/bootstrap/node.js:*:*)
   at startup (internal/bootstrap/node.js:*:*)
   at Anonymous function (internal/bootstrap/node.js:*:*)
100
[eval]:1
'use strict'; var x = 100; y = x;
                           ^

ReferenceError: Variable undefined in strict mode
   at Global code ([eval]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([eval]-wrapper:*:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*:*)
   at evalScript (internal/bootstrap/node.js:*:*)
   at executeUserCode (internal/bootstrap/node.js:*:*)
   at startExecution (internal/bootstrap/node.js:*:*)
   at startup (internal/bootstrap/node.js:*:*)
   at Anonymous function (internal/bootstrap/node.js:*:*)

vm.js:*
      return super.runInThisContext(...args);
      ^
10

vm.js:*
      return super.runInThisContext(...args);
      ^
10
done
